<resources>
    <string name="app_name">AppColeta</string>
    <string name="titulo_detalhes_da_rota">DETALHES DA ROTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horario">Horário</string>
    <string name="configuracoes">Configurações</string>
    <string name="status">Status</string>
    <string name="paciente">Paciente</string>
    <string name="iniciar_rota">Iniciar rota</string>
    <string name="data">Data</string>
    <string name="regiao">Região</string>
    <string name="horario_de_inicio">Horário de início</string>
    <string name="motorista">Motorista</string>
    <string name="enfermeiros">Enfermeiros</string>
    <string name="exames">Exames</string>
    <string name="proximo_destino">PRÓXIMO DESTINO</string>
    <string name="endereco">Endereço</string>
    <string name="chegada">Chegada:</string>
    <string name="pagamento">Pagamento</string>
    <string name="cliente">Cliente:</string>
    <string name="todo">TODO</string>
    <string name="chegou_ao_destino">VOCÊ CHEGOU AO DESTINO</string>
    <string name="exame">Exame</string>
</resources>