<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".proximoDestino">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/proximo_destino_titulo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/proximo_destino"
            android:textColor="#4858b8"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/proximo_destino_endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/endereco"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/proximo_destino_mapa"
            app:layout_constraintTop_toBottomOf="@+id/proximo_destino_titulo" />

        <TextView
            android:id="@+id/proximo_destino_chegada_resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="9:00"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/proximo_destino_mapa"
            app:layout_constraintTop_toTopOf="@+id/proximo_destino_chegada" />

        <TextView
            android:id="@+id/proximo_destino_chegada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/chegada"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/proximo_destino_chegada_resposta"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/proximo_destino_endereco"
            app:layout_constraintTop_toTopOf="@+id/proximo_destino_endereco" />

        <ImageView
            android:id="@+id/proximo_destino_mapa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proximo_destino_endereco"
            android:contentDescription="@string/todo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proximo_destino_mapa">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/proximo_destino_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cliente"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/proximo_destino_cliente_resposta"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/proximo_destino_cliente_resposta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/proximo_destino_cliente"
                    app:layout_constraintEnd_toStartOf="@+id/proximo_destino_exame"
                    app:layout_constraintStart_toEndOf="@+id/proximo_destino_cliente"
                    app:layout_constraintTop_toTopOf="@+id/proximo_destino_cliente"
                    tools:text="Fulano de Tal" />

                <TextView
                    android:id="@+id/proximo_destino_exame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/exame"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/proximo_destino_cliente_resposta"
                    app:layout_constraintEnd_toStartOf="@+id/proximo_destino_exame_resposta"
                    app:layout_constraintStart_toEndOf="@+id/proximo_destino_cliente_resposta"
                    app:layout_constraintTop_toTopOf="@+id/proximo_destino_cliente_resposta" />

                <TextView
                    android:id="@+id/proximo_destino_exame_resposta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/proximo_destino_exame"
                    app:layout_constraintEnd_toStartOf="@+id/proximo_destino_pagamento"
                    app:layout_constraintStart_toEndOf="@+id/proximo_destino_exame"
                    app:layout_constraintTop_toTopOf="@+id/proximo_destino_exame"
                    tools:text="11 desoxicortisol" />

                <TextView
                    android:id="@+id/proximo_destino_pagamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/pagamento"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/proximo_destino_exame_resposta"
                    app:layout_constraintEnd_toStartOf="@+id/proximo_destino_pagamento_resposta"
                    app:layout_constraintStart_toEndOf="@+id/proximo_destino_exame_resposta"
                    app:layout_constraintTop_toTopOf="@+id/proximo_destino_exame_resposta" />

                <TextView
                    android:id="@+id/proximo_destino_pagamento_resposta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/proximo_destino_pagamento"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/proximo_destino_pagamento"
                    app:layout_constraintTop_toTopOf="@+id/proximo_destino_pagamento"
                    tools:text="Unimed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>