<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalhesRota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_detalhes_rota"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/titulo_detalhes_da_rota"
                android:textColor="#4858b8"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/detalhes_rota_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#f4f5f9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo_detalhes_rota">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/detalhes_rota_data"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/data"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detalhes_rota_data_resposta"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="110dp"
                        android:layout_marginLeft="110dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detalhes_rota_data"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detalhes_rota_data"
                        app:layout_constraintTop_toTopOf="@+id/detalhes_rota_data"
                        tools:text="11/08/2021" />

                    <TextView
                        android:id="@+id/detalhes_rota_regiao"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/regiao"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_data"
                        app:layout_constraintTop_toBottomOf="@+id/detalhes_rota_data" />

                    <TextView
                        android:id="@+id/detalhes_rota_regiao_resposta"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detalhes_rota_regiao"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_data_resposta"
                        app:layout_constraintTop_toTopOf="@+id/detalhes_rota_regiao"
                        tools:text="Francisco Bernardino" />

                    <TextView
                        android:id="@+id/detalhes_rota_exames"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/exames"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_data"
                        app:layout_constraintTop_toBottomOf="@+id/detalhes_rota_regiao" />

                    <ListView
                        android:id="@+id/detalhes_rota_lista_exames"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        app:layout_constraintBottom_toTopOf="@+id/detalhes_rota_enfermeiros_resposta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_regiao_resposta"
                        app:layout_constraintTop_toTopOf="@id/detalhes_rota_exames"
                        tools:listitem="@layout/item_exame" />

                    <TextView
                        android:id="@+id/detalhes_rota_enfermeiros"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/enfermeiros"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_exames"
                        app:layout_constraintTop_toBottomOf="@+id/detalhes_rota_lista_exames" />

                    <TextView
                        android:id="@+id/detalhes_rota_enfermeiros_resposta"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detalhes_rota_enfermeiros"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_lista_exames"
                        app:layout_constraintTop_toTopOf="@+id/detalhes_rota_enfermeiros"
                        tools:text="Fulano de Tal, Ciclano de Tal" />

                    <TextView
                        android:id="@+id/detalhes_rota_motorista"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/motorista"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_enfermeiros"
                        app:layout_constraintTop_toBottomOf="@+id/detalhes_rota_enfermeiros" />

                    <TextView
                        android:id="@+id/detalhes_rota_motorista_resposta"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detalhes_rota_motorista"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_lista_exames"
                        app:layout_constraintTop_toTopOf="@+id/detalhes_rota_motorista"
                        tools:text="Beltrano de Tal" />

                    <TextView
                        android:id="@+id/detalhes_rota_horario_inicio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/horario_de_inicio"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_motorista"
                        app:layout_constraintTop_toBottomOf="@+id/detalhes_rota_motorista"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/detalhes_rota_horario_inicio_resposta"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/detalhes_rota_horario_inicio"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detalhes_rota_motorista_resposta"
                        app:layout_constraintTop_toTopOf="@+id/detalhes_rota_horario_inicio"
                        tools:text="09:00" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>