<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rotas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/rota_data"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#4858b8"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="11/08/2021" />

        <Button
            android:id="@+id/rota_botao_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#4858b8"
            android:text="@string/iniciar_rota"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rota_data" />

        <ImageView
            android:id="@+id/rota_mapa"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/exemplo_mapa"
            app:layout_constraintBottom_toTopOf="@+id/rota_card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rota_botao_iniciar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rota_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#f4f5f9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rota_mapa">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/rota_divider_superior"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rota_paciente"
                    android:layout_width="117dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/paciente"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_divider1"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior" />

                <TextView
                    android:id="@+id/rota_status"
                    android:layout_width="117dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_divider2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_divider1"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior" />

                <TextView
                    android:id="@+id/rota_endereco"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/endereco"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_divider3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_divider2"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior" />

                <TextView
                    android:id="@+id/rota_exame"
                    android:layout_width="117dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/exame"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_horario"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_divider3"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior" />

                <TextView
                    android:id="@+id/rota_horario"
                    android:layout_width="117dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/horario"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rota_divider_inferior"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_divider4"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior" />

                <View
                    android:id="@+id/rota_divider_inferior"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rota_endereco" />

                <View
                    android:id="@+id/rota_divider1"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_status"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_paciente"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/rota_divider2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_endereco"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_status"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior"
                    app:layout_constraintVertical_bias="0.506" />

                <View
                    android:id="@+id/rota_divider3"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_exame"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_endereco"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior"
                    app:layout_constraintVertical_bias="0.481" />

                <View
                    android:id="@+id/rota_divider4"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/rota_divider_inferior"
                    app:layout_constraintEnd_toStartOf="@+id/rota_horario"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rota_exame"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_superior"
                    app:layout_constraintVertical_bias="0.481" />

                <GridView
                    android:id="@+id/exibe_dieta_relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:numColumns="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rota_divider_inferior"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/item_rota" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>